<resources>
    <string name="app_name">GreenerMe</string>
    <string name="DEF_placeholder">" "</string>
    <string name="textView_loggedOut">Start recycling today</string>
    <string name="login_btn">Log in</string>
    <string name="signupText_btn">Don’t have an account?</string>
    <string name="forgotAccText_btn">Forgot your password?</string>
    <string name="signin_btn">Continue</string>
    <string name="email_login">Email address</string>
    <string name="password_login">Password</string>
    <string name="textView_forgotAcc">Enter email address</string>
    <string name="logoutHomepageText_btn">Back to login page?</string>
    <string name="textView_createAcc">Create Your Account</string>
    <string name="username_signup">Username</string>
    <string name="signup_btn">Sign Up</string>
    <string name="loginText_btn">Already have an account? Login here</string>
    <string name="find_item">Find item</string>
    <string name="take_quiz">Take quiz</string>
    <string name="check_points">Check points</string>
    <string name="view_account">View account</string>
    <string name="home_welcome_back">Welcome Back!</string>
    <string name="home_find">Check if your item is recyclable</string>
    <string name="home_view_all_items">View all items</string>
    <string name="home_or_other">or</string>
    <string name="home_weekly_quiz">"Weekly\nQuiz"</string>
    <string name="home_my_points">My Points</string>
    <string name="home_account_settings">"Account\nSettings"</string>
    <string name="hi_greeting">Hi %s,</string>
    <string name="greeting">What would you like to do today?</string>
    <string name="about_app">About app</string>
    <string name="homepagelogout_btn">Login / Register</string>
    <string name="why_app">Why This App?</string>
    <string name="why_app_desc">Created during NUS Orbital 2018, the GreenerMe App aims to conveniently provide information on recycling, increase awareness about the environment through weekly quizzes and encourage food environmental habits </string>
    <string name="how_app">How To Use</string>
    <string name="how_app_desc">The app contains a few features. To maximise your experience follow these steps:</string>
    <string name="how_app_desc_1"><b>1.</b> Search for the item that you are interested in to gather recycling information specified to the item!</string>
    <string name="how_app_desc_2"><b>2.</b> Create your own account via email or using your Google account to start collecting points!</string>
    <string name="how_app_desc_3"><b>3.</b> Attempt the weekly quizzes to gain points and conquer the leaderboard to stand a chance to win attractive prizes!</string>
    <string name="credits_app">Credits</string>
    <string name="credits_app_desc1">Created by Team Turtles (2018)</string>
    <string name="credis_app_desc2">Leaf and icon images from flaticon.com</string>
    <string name="credits_app_des3">Item details from NEA</string>
    <string name="FI_finditem">Find Item</string>
    <string name="FI_itemcategories">Item Categories</string>
    <string name="FI_viewAllItems">All Items</string>
    <string name="search_hint">Item name</string>
    <string name="Det_item_details">Item Details</string>
    <string name="Det_details_for">Details for</string>
    <string name="Det_category">"Category: "</string>
    <string name="Det_howtorecycle">How to recycle</string>
    <string name="Det_whattodo">What to do</string>
    <string name="Det_txt_recyclable">Recyclable</string>
    <string name="Det_txt_notRecyclable">Not Recyclable</string>
    <string name="Quiz_weekly_quiz">Weekly Quiz</string>
    <string name="Quiz_startToEndDates">"%s to %s"</string>
    <string name="Quiz_encouragement">Take the weekly quiz, learn and earn points!</string>
    <string name="Quiz_focus">This week, let’s focus on</string>
    <string name="Quiz_triedAlr">You have tried this week’s quiz on</string>
    <string name="Quiz_start">Start</string>
    <string name="Quiz_viewAns">Review quiz</string>
    <string name="Quiz_comeback">Come back again next week to earn points and stay on the leaderboard!</string>
    <string name="Qn_weekly_quiz">Weekly Quiz</string>
    <string name="Qn_questionNum">"Question %d"</string>
    <string name="Qn_end_quiz">"End Quiz"</string>
    <string name="EQ_endofquiz">Quiz Results</string>
    <string name="EQ_yougot">You got</string>
    <string name="EQ_correct">correct</string>
    <string name="EQ_pointsearned">" points earned"</string>
    <string name="EQ_comeback">"Come back again next week to earn points and stay on the leaderboard!"</string>
    <string name="EQ_viewans">Review quiz</string>
    <string name="myPoints">My Points</string>
    <string name="txt_mypoints_0">You have earned</string>
    <string name="txt_mypoints_1">Earn points from searching for items and taking the weekly quiz</string>
    <string name="txt_mypoints_2">Win prizes in our monthly lucky draw! More points, more chances</string>
    <string name="txt_mypoints_3">points</string>
    <string name="leaderboard_btn">View leaderboard</string>
    <string name="leaderboardHeading">Leaderboard</string>
    <string name="rankLB">Rank</string>
    <string name="nameLB">Name</string>
    <string name="pointsLB">Points</string>
    <string name="txt_leaderboard">Win prizes in our monthly lucky draw! More points, more chances</string>
    <string name="backToPts_btn">Back to My Points</string>
    <string name="accSettings">Account Settings</string>
    <string name="changeUsername_btn">Edit Username</string>
    <string name="changePassword_btn">Change Password</string>
    <string name="deleteAccount_btn">Delete Account</string>
    <string name="logout_btn">Log out</string>
    <string name="deleteAccHeading">Delete Account?</string>
    <string name="deleteAccText">All user data will be deleted. Continue?</string>
    <string name="cancel_btn">Cancel</string>
    <string name="txt_password">Confirm with Password:</string>
    <string name="changePasswordHeading">Change Password</string>
    <string name="oldPassword">Old Password: </string>
    <string name="newPassword">New Password: </string>
    <string name="confirmPassword">Confirm Password: </string>
    <string name="editUsernameHeading">Edit Username</string>
    <string name="oldUsername">Current Username: </string>
    <string name="newUsername">New Username: </string>
    <string name="emailVerificationHeading">Email has not been verified</string>
    <string name="emailVerificationText">Please check your inbox for the verification email.</string>
    <string name="emailSentTo">Email sent to:</string>
    <string name="resendEmail_btn">Resend Email</string>
    <string name="verified_btn">Verified</string>
    <string name="emailText">Email has been sent to:</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>