<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.AboutAppPage">

    <ImageView
        android:id="@+id/homepage_loggedout_logo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/DEF_placeholder"
        app:layout_constraintEnd_toStartOf="@+id/about_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/about_title"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/euphoria_script"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/homepage_loggedout_logo"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/about_button"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/DEF_placeholder"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/aboutappbutton" />

    <TextView
        android:id="@+id/about_app_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/about_app"
        android:textColor="#7CCB6F"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/about_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homepage_loggedout_logo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/why_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:lineSpacingExtra="18sp"
                android:paddingTop="8dp"
                android:text="@string/why_app"
                android:textAlignment="center"
                android:textColor="#333333"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="162dp" />

            <TextView
                android:id="@+id/why_app_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:padding="8dp"
                android:text="@string/why_app_desc"
                android:textAlignment="textStart"
                tools:layout_editor_absoluteX="125dp"
                tools:layout_editor_absoluteY="137dp" />

            <TextView
                android:id="@+id/how_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:lineSpacingExtra="18sp"
                android:paddingTop="8dp"
                android:text="@string/how_app"
                android:textAlignment="center"
                android:textColor="#333333"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="162dp" />

            <TextView
                android:id="@+id/how_app_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:padding="8dp"
                android:text="@string/how_app_desc"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="125dp"
                tools:layout_editor_absoluteY="137dp" />

            <TextView
                android:id="@+id/how_app_desc_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:padding="6dp"
                android:text="@string/how_app_desc_1"
                android:textAlignment="textStart"
                tools:layout_editor_absoluteX="125dp"
                tools:layout_editor_absoluteY="137dp"
                tools:text="@string/how_app_desc_1" />

            <TextView
                android:id="@+id/how_app_desc_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:padding="4dp"
                android:text="@string/how_app_desc_2"
                android:textAlignment="textStart"
                tools:layout_editor_absoluteX="125dp"
                tools:layout_editor_absoluteY="137dp"
                tools:text="@string/how_app_desc_2" />

            <TextView
                android:id="@+id/how_app_desc_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:padding="4dp"
                android:text="@string/how_app_desc_3"
                android:textAlignment="textStart"
                tools:layout_editor_absoluteX="125dp"
                tools:layout_editor_absoluteY="137dp"
                tools:text="@string/how_app_desc_3" />

            <TextView
                android:id="@+id/credits_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:lineSpacingExtra="18sp"
                android:paddingTop="8dp"
                android:text="@string/credits_app"
                android:textAlignment="center"
                android:textColor="#333333"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="176dp"
                tools:layout_editor_absoluteY="162dp" />

            <TextView
                android:id="@+id/credits_app_desc1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/credits_app_desc1"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="125dp"
                tools:layout_editor_absoluteY="137dp"
                tools:text="@string/credits_app_desc1" />

            <TextView
                android:id="@+id/credits_app_desc2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/credis_app_desc2"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>