<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/deleteAccHeading"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/border_top_bottom"
        android:gravity="center"
        android:padding="10dip"
        android:text="@string/deleteAccHeading"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="#333"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deleteAccText"
        android:layout_width="260dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/deleteAccText"
        android:textAlignment="center"
        android:textColor="#333"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteAccHeading" />

    <Button
        android:id="@+id/cancel_btn"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_rectangle"
        android:gravity="center"
        android:text="@string/cancel_btn"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/deleteAccPop_btn"
        app:layout_constraintEnd_toStartOf="@+id/deleteAccPop_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/deleteAccPop_btn"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/deleteAccPop_btn"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_top_bottom_right"
        android:gravity="center"
        android:text="@string/deleteAccount_btn"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_btn"
        app:layout_constraintTop_toBottomOf="@+id/password_EditText" />

    <TextView
        android:id="@+id/password_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/txt_password"
        android:textAlignment="center"
        android:textColor="#333"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/password_EditText"
        app:layout_constraintEnd_toStartOf="@+id/password_EditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password_EditText"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/password_EditText"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_rectangle"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:hint="@string/DEF_placeholder"
        android:inputType="textPassword"
        android:padding="5dip"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toEndOf="@+id/password_TextView"
        app:layout_constraintTop_toBottomOf="@+id/deleteAccText" />

    <android.support.constraint.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</android.support.constraint.ConstraintLayout>